--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #FFDE00;
+    background-color: #CC0000;
     color: #ffffff;
 }
 
@@ -12,4 +12,17 @@ h1 {
 
 h2 {
     font-size: 25px;
+}
+
+p {
+    padding-left: 10px;
+    text-align: left;
+}
+
+.row > div{
+    padding: 10px;
+    text-align: center;
+    background: #FFDE00;
+    border: 5px solid #3B4CCA;
+    line-height: 60px;
 }
