--- a/style.css
+++ b/style.css
@@ -6,8 +6,19 @@ body {
 h1 {
     font-size: 60px;
     text-align: center;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
     color: #ffffff;
+}
+
+.searchbar {
+    padding: 10px;
+    text-align: left;
+}
+
+.btn {
+    text-align: center;
+    background-color: #FFDE00;
+    border: 5px solid #3B4CCA;
 }
 
 h2 {
