--- a/style.css
+++ b/style.css
@@ -6,19 +6,21 @@ body {
 h1 {
     font-size: 60px;
     text-align: center;
-    /* margin-bottom: 15px; */
+    margin-bottom: 15px;
     color: #ffffff;
 }
 
 .searchbar {
     padding: 10px;
     text-align: left;
+    color: #ffffff;
 }
 
-.btn {
+button {
     text-align: center;
     background-color: #FFDE00;
     border: 5px solid #3B4CCA;
+    color: #ffffff;
 }
 
 h2 {
