added classes to dynamically added elements for styling purposes

--- a/style.css
+++ b/style.css
@@ -1,41 +1,41 @@
 body {
-    background-color: #CC0000;
-    color: #ffffff;
+  background-color: #cc0000;
+  color: #ffffff;
 }
 
 h1 {
-    font-size: 60px;
-    text-align: center;
-    margin-bottom: 15px;
-    color: #ffffff;
+  font-size: 60px;
+  text-align: center;
+  margin-bottom: 15px;
+  color: #ffffff;
 }
 
 .searchbar {
-    padding: 10px;
-    text-align: left;
-    color: #ffffff;
+  padding: 10px;
+  text-align: left;
+  color: #ffffff;
 }
 
 button {
-    text-align: center;
-    background-color: #FFDE00;
-    border: 5px solid #3B4CCA;
-    color: #ffffff;
+  text-align: center;
+  background-color: #ffde00;
+  border: 5px solid #3b4cca;
+  color: #ffffff;
 }
 
 h2 {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 p {
-    padding-left: 10px;
-    text-align: left;
+  padding-left: 10px;
+  text-align: left;
 }
 
-.row > div{
-    padding: 10px;
-    text-align: center;
-    background: #FFDE00;
-    border: 5px solid #3B4CCA;
-    line-height: 60px;
+.row > div {
+  padding: 10px;
+  text-align: center;
+  background: #ffde00;
+  border: 5px solid #3b4cca;
+  line-height: 60px;
 }
